--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/lucianopf/blogo-test-editor/issues"
   },
   "homepage": "https://github.com/lucianopf/blogo-test-editor#readme",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
